@@ -41,125 +41,98 @@ import org.junit.Before;
  * @author <a href="mailto:aslak@redhat.com">Aslak Knutsen</a>
  * @version $Revision: $
  */
-public class AbstractServerBase
-{
-   protected Server server;
+public class AbstractServerBase {
+    protected Server server;
 
-   @Before
-   public void setup() throws Exception
-   {
-      server = new Server(8181);
+    @Before
+    public void setup() throws Exception {
+        server = new Server(8181);
 
-      ServletContextHandler root = new ServletContextHandler(ServletContextHandler.SESSIONS);
-      root.setContextPath("/arquillian-protocol");
-      root.addServlet(ServletTestRunner.class, ServletMethodExecutor.ARQUILLIAN_SERVLET_MAPPING);
-      server.setHandler(root);
-      server.start();
-   }
+        ServletContextHandler root = new ServletContextHandler(ServletContextHandler.SESSIONS);
+        root.setContextPath("/arquillian-protocol");
+        root.addServlet(ServletTestRunner.class, ServletMethodExecutor.ARQUILLIAN_SERVLET_MAPPING);
+        server.setHandler(root);
+        server.start();
+    }
 
-   @After
-   public void cleanup() throws Exception
-   {
-      MockTestRunner.clear();
-      server.stop();
-   }
+    @After
+    public void cleanup() throws Exception {
+        MockTestRunner.clear();
+        server.stop();
+    }
 
-   protected Collection<HTTPContext> createContexts()
-   {
-       List<HTTPContext> context = new ArrayList<HTTPContext>();
-       context.add(createContext());
-       return context;
-   }
-   protected HTTPContext createContext()
-   {
-      URI baseURI = createBaseURL();
-      HTTPContext context = new HTTPContext(baseURI.getHost(), baseURI.getPort());
-      context.add(new Servlet(ServletMethodExecutor.ARQUILLIAN_SERVLET_NAME, baseURI.getPath()));
-      return context;
-   }
-   protected URI createBaseURL()
-   {
-      return URI.create("http://localhost:" + server.getConnectors()[0].getPort() + "/arquillian-protocol");
-   }
+    protected Collection<HTTPContext> createContexts() {
+        List<HTTPContext> context = new ArrayList<HTTPContext>();
+        context.add(createContext());
+        return context;
+    }
 
-   protected URL createURL(String outputMode, String testClass, String methodName)
-   {
-      StringBuilder url = new StringBuilder(createBaseURL().toASCIIString() + "/ArquillianServletRunner");
-      boolean first = true;
-      if (outputMode != null)
-      {
-         if (first)
-         {
-            first = false;
-            url.append("?");
-         }
-         else
-         {
-            url.append("&");
-         }
-         url.append(ServletTestRunner.PARA_OUTPUT_MODE).append("=").append(outputMode);
-      }
-      if (testClass != null)
-      {
-         if (first)
-         {
-            first = false;
-            url.append("?");
-         }
-         else
-         {
-            url.append("&");
-         }
-         url.append(ServletTestRunner.PARA_CLASS_NAME).append("=").append(testClass);
-      }
-      if (methodName != null)
-      {
-         if (first)
-         {
-            first = false;
-            url.append("?");
-         }
-         else
-         {
-            url.append("&");
-         }
-         url.append(ServletTestRunner.PARA_METHOD_NAME).append("=").append(methodName);
-      }
+    protected HTTPContext createContext() {
+        URI baseURI = createBaseURL();
+        HTTPContext context = new HTTPContext(baseURI.getHost(), baseURI.getPort());
+        context.add(new Servlet(ServletMethodExecutor.ARQUILLIAN_SERVLET_NAME, baseURI.getPath()));
+        return context;
+    }
 
-      try
-      {
-         return new URL(url.toString());
-      }
-      catch (Exception e)
-      {
-         throw new RuntimeException("Could not create url", e);
-      }
-   }
+    protected URI createBaseURL() {
+        return URI.create("http://localhost:" + server.getConnectors()[0].getPort() + "/arquillian-protocol");
+    }
 
-   public static class MockTestExecutor implements TestMethodExecutor, Serializable
-   {
+    protected URL createURL(String outputMode, String testClass, String methodName) {
+        StringBuilder url = new StringBuilder(createBaseURL().toASCIIString() + "/ArquillianServletRunner");
+        boolean first = true;
+        if (outputMode != null) {
+            if (first) {
+                first = false;
+                url.append("?");
+            } else {
+                url.append("&");
+            }
+            url.append(ServletTestRunner.PARA_OUTPUT_MODE).append("=").append(outputMode);
+        }
+        if (testClass != null) {
+            if (first) {
+                first = false;
+                url.append("?");
+            } else {
+                url.append("&");
+            }
+            url.append(ServletTestRunner.PARA_CLASS_NAME).append("=").append(testClass);
+        }
+        if (methodName != null) {
+            if (first) {
+                first = false;
+                url.append("?");
+            } else {
+                url.append("&");
+            }
+            url.append(ServletTestRunner.PARA_METHOD_NAME).append("=").append(methodName);
+        }
 
-      private static final long serialVersionUID = 1L;
+        try {
+            return new URL(url.toString());
+        } catch (Exception e) {
+            throw new RuntimeException("Could not create url", e);
+        }
+    }
 
-      public void invoke(Object... parameters) throws Throwable
-      {
-      }
+    public static class MockTestExecutor implements TestMethodExecutor, Serializable {
 
-      public Method getMethod()
-      {
-         try
-         {
-            return this.getClass().getMethod("getMethod");
-         }
-         catch (Exception e)
-         {
-            throw new RuntimeException("Could not find my own method ?? ");
-         }
-      }
+        private static final long serialVersionUID = 1L;
 
-      public Object getInstance()
-      {
-         return this;
-      }
-   }
+        public void invoke(Object... parameters) throws Throwable {
+        }
+
+        public Method getMethod() {
+            try {
+                return this.getClass().getMethod("getMethod");
+            } catch (Exception e) {
+                throw new RuntimeException("Could not find my own method ?? ");
+            }
+        }
+
+        public Object getInstance() {
+            return this;
+        }
+    }
 }
